test/org/midica/testfiles/failing/unknown-cmd.midica
INCLUDE_FILE inc/instruments.midica

0 c /4

UNKNOWN_CMD
